--- a/outogenerate.html
+++ b/outogenerate.html
@@ -177,6 +177,10 @@
                   accept="image/png"
                 />
               </div>
+              <div class="invalid-feedback">
+                Please add a Side Image to proceed with generating the
+                certificate.
+              </div>
             </div>
 
             <!-- Has background image -->
@@ -190,6 +194,10 @@
                 id="generator_backgroundImage"
                 accept="image/*"
               />
+              <div class="invalid-feedback">
+                Please add a Background Image to proceed with generating the
+                certificate.
+              </div>
             </div>
           </div>
 
@@ -252,16 +260,6 @@
                 </li>
               </ul>
             </div>
-
-            <!-- Generate Data File -->
-            <!-- <button class="btn btn-light flex-fill" id="saveCertificationData">
-              Save Data
-            </button> -->
-
-            <!-- Save as PDF -->
-            <!-- <button class="btn btn-light flex-fill" id="saveCertification">
-              Save PDF
-            </button> -->
           </div>
         </div>
 
