--- a/outogenerate.html
+++ b/outogenerate.html
@@ -202,8 +202,12 @@
           </div>
 
           <!-- Submit actions -->
-          <p class="mb-3 mt-4">
+          <p class="mb-2 mt-4">
             Make sure to <strong>Generate Certificate</strong> before export it
+          </p>
+          <p class="mb-3">
+            Export the certificate as a <strong>JSON</strong> file to use for
+            certificate generation.
           </p>
           <div class="d-flex flex-wrap gap-2">
             <!-- Certificate Preview -->
