Fix side image fitting

--- a/outogenerate.html
+++ b/outogenerate.html
@@ -29,7 +29,7 @@
     ></script>
 
     <!-- Include html2canvas and jsPDF libraries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dom-to-image@2.6.0/dist/dom-to-image.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 
     <!-- Quill Rich Text Editor -->
