Fix side image validation form input invalid text

--- a/outogenerate.html
+++ b/outogenerate.html
@@ -186,10 +186,10 @@
                   id="generator_sideImage"
                   accept="image/png"
                 />
-              </div>
-              <div class="invalid-feedback">
-                Please add a Side Image to proceed with generating the
-                certificate.
+                <div class="invalid-feedback">
+                  Please add a Side Image to proceed with generating the
+                  certificate.
+                </div>
               </div>
             </div>
 
@@ -298,9 +298,7 @@
             <div id="certificate" class="ql-snow">
               <div class="content">
                 <!-- Side Image -->
-                <div class="side">
-                  <img src="" />
-                </div>
+                <div class="side"></div>
 
                 <!-- Certificate data -->
                 <div class="data-form ql-editor">
