--- a/outogenerate.html
+++ b/outogenerate.html
@@ -23,21 +23,6 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- Include html2canvas and jsPDF libraries -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/dom-to-image@2.6.0/dist/dom-to-image.min.js"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"
-      crossorigin="anonymous"
-    ></script>
 
     <!-- Quill Rich Text Editor -->
     <link
@@ -45,24 +30,9 @@
       rel="stylesheet"
       crossorigin="anonymous"
     />
-    <script
-      defer
-      src="https://cdn.bootcdn.net/ajax/libs/quill/1.3.7/quill.min.js"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- Quill Image Resize Module -->
-    <script
-      defer
-      src="https://unpkg.com/quill-resize-image@1.0.5/dist/quill-resize-image.min.js"
-      crossorigin="anonymous"
-    ></script>
 
     <!-- Generator style -->
     <link rel="stylesheet" href="./css/style.css" />
-
-    <!-- Generator script -->
-    <script src="./js/certificate.js" type="module"></script>
   </head>
 
   <body>
@@ -330,5 +300,39 @@
       <!-- Canvas element where HTML content will be rendered -->
       <canvas id="canvasOutput" style="display: none"></canvas>
     </div>
+
+    <!-- Bootstrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Quill Rich Text Editor -->
+    <script
+      defer
+      src="https://cdn.bootcdn.net/ajax/libs/quill/1.3.7/quill.min.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Quill Image Resize Module -->
+    <script
+      defer
+      src="https://unpkg.com/quill-resize-image@1.0.5/dist/quill-resize-image.min.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Include domToImage and jsPDF libraries -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/dom-to-image@2.6.0/dist/dom-to-image.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Generator script -->
+    <script src="./js/certificate.js" type="module"></script>
   </body>
 </html>
